--- a/base/style.css
+++ b/base/style.css
@@ -10,6 +10,11 @@
 	font-weight: normal;
 }
 
+.page {
+	width: 90%;
+	margin-left: 5%;
+}
+
 .subscript {
     /* This places the paragraph in the center and makes it white. */
     text-align: center;
@@ -28,8 +33,8 @@
 	font-size: 3vmin;
 	font-weight: normal;
 	
-	margin-left: 5%;
-	margin-right: 5%;
+	margin-left: 2.5%;
+	margin-right: 2.5%;
 	
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -51,15 +56,40 @@
 	padding-left: 5%;
 }
 
-.hyperlink, .hyperlink_blue {
-    color: yellow;
+
+
+
+
+/* HYPERLINK YELLOW */
+.hyperlink, .hyperlink_blue, .hyperlink_green {
+    color: rgb(255,255,0);
 	font-family: "MediumGotham";
 	font-size: 3vmin;
 }
 
-.hyperlink_blue {
-	color: blue;
+.hyperlink:hover {
+	background-color: rgba(255,255,0,0.5);
 }
+/* HYPERLINK BLUE */
+.hyperlink_blue {
+	color: rgb(0,0,255);
+}
+
+.hyperlink_blue:hover {
+	background-color: rgba(0,0,255,0.5);
+}
+/* HYPERLINK GREEN */
+.hyperlink_green {
+	color: rgb(0, 255, 0);
+}
+
+.hyperlink_green:hover {
+	background-color: rgba(0, 255, 0,0.5);
+}
+
+
+
+
 
 .NAVIGATION_BUTTON {
 	width: 40%;
@@ -79,7 +109,7 @@ body {
 
 header {
 	width: 100%;
-	height: 120px;
+	height: 100px;
 	background-color:rgb(255, 106, 0);
 	border-bottom: solid 4px white;
 	box-shadow: 0px 60px 50px black;
@@ -97,9 +127,10 @@ header {
   cursor: pointer;
   font-size: 15px;
   width: 33.33%;
-  height: 50px;
-  line-height: 50px;
+  height: 40px;
+  line-height: 40px;
   text-decoration: none;
+  margin-bottom: 2.5%;
 }
 
 .no_js_tablink {
@@ -115,6 +146,7 @@ header {
   height: 50px;
   line-height: 50px;
   text-decoration: none;
+  margin-bottom: 2.5%;
 }
 
 
@@ -156,7 +188,7 @@ footer {
 	height: auto;
 }
 
-h1 {
+.orange_heading {
 	padding: 10px 10px;
 	text-align: center;
 	font-size: 50px;
@@ -165,21 +197,21 @@ h1 {
 	color: rgb(255, 106, 0);
 	/* text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; */
 	text-shadow: 0px 0px 15px black;
-	margin-top: 70px;
+	margin-top: 50px;
 }
 
-.page_name {
-	margin-top: 70px;
+.page_name, .page_name_left {
 	height: 100%;
-	width:90%;
-	border-bottom: solid 8px white;
+	width:95%;
+	border-bottom: solid 4px white;
 	text-shadow: 0px 0px 10px black;
 	box-shadow: 0px 10px 10px -10px black;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 4%;
 	text-align: center;
-	font-size: 3vw;
+	font-size: 2.5vw;
 	font-family: "CustomGotham";
 	font-weight: bold;
 	color: white;
@@ -187,12 +219,27 @@ h1 {
 	padding-bottom: 10px;
 }
 
+.page_name_left {
+	text-align: left;
+}
+
+.white_heading {
+	width: 100%;
+	font-size: 3vw;
+	font-family: "CustomGotham";
+	text-shadow: 0px 0px 1vw black;
+	color: white;
+	line-height: 4vw;
+	margin-top: 1%;
+	margin-bottom: 1%;
+}
+
 iframe {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	
-    width: 40vw;
-    height: 22.5vw; /* 100/56.25 = 560/315 = 1.778 */
+    width: 35.56vw;
+    height: 20vw; /* 100/56.25 = 560/315 = 1.778 */
 	border-radius: 25px;
 	
 	display: block;
@@ -202,7 +249,7 @@ iframe {
 	outline: none;
 }
 
-.mediaBox, .SmallMediaBox, .BigMediaBox {
+.mediaBox, .SmallMediaBox, .BigMediaBox, .tinyMediaBox {
 	padding-top: 10px;
 	padding-bottom: 15px;
 	text-align: center;
@@ -211,12 +258,13 @@ iframe {
 	color: white;
 	
 	overflow: auto;
-	width: 60%;
+	word-wrap: break-word;
+	width: 65%;
 	height: 100%;
 	background-color: rgb(255, 106, 0);
 	border: solid 4px white;
 	border-radius: 25px;
-	box-shadow: 0px 0px 30px 5px black;
+	box-shadow: 0px 0px 30px 1px black;
 	
 	display: block;
 	margin-left: auto;
@@ -225,7 +273,7 @@ iframe {
 }
 
 .BigMediaBox {
-	width: 88%;
+	width: 98%;
 }
 
 .SmallMediaBox {
@@ -236,6 +284,7 @@ iframe {
 	
 	margin-left: 0px;
 	margin-right: 0px;
+	padding: 10px;
 }
 
 .container{
@@ -246,10 +295,14 @@ iframe {
 	align-items: stretch;
 	justify-content: space-around;
 	
-	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 	margin-left: 4%;
 	margin-right: 4%;
+}
+
+#Charts {
+	background-color: rgba(0,0,0,0.35)
 }
 
 
@@ -262,16 +315,49 @@ iframe {
 	
 	margin-left: 2%;
 	margin-right: 2%;
-	margin-bottom: 2%;
-	
 	background-color: rgba(25,25,25,0.1);
 	
 	display: block;
 	float: left;
 }
 
+.article_nav {
+	margin-top: 40px;
+	margin-bottom: 40px;
+	background-color: rgba(25,25,25,0.1);
+	width: 100%;
+	display: table;
+	
+	font-family: "CustomGotham";
+	text-align: center;
+	color: white;
+	padding-bottom: 20px;
+	border-collapse: separate;
+    border-spacing: 5px;
+	border-radius: 20px;
+}
+
+.article_nav_button {
+	font-family: "CustomGotham";
+	width: 18%;
+	text-align: center;
+	font-size: 16px;
+	color: white;
+	background-color: rgba(25,25,25,0.35);
+	border: solid 3px rgba(255,255,255,0.35);
+	border-radius: 20px;
+	padding: 10px 0px 10px 0px;
+	display: inline-block;
+}
+
+.article_nav_button:hover {
+	background-color: rgba(25,255,255,0.35);
+	box-shadow: 0px 0px 5px rgba(255,255,255,0.35);
+}
+
 .article_title, .doubler_title {
 	margin-bottom: 2.5%;
+	margin-top: 0%;
 	padding-top: 0.5%;
 	padding-bottom: 0.5%;
 	
@@ -299,16 +385,14 @@ iframe {
 
 .article_container{
 	height: 100%;
-	width: 90%;
+	width: 100%;
 	min-height: 100%;
 	
-	display: table;
+	display: inline-block;
 	border-radius: 20px;
+	text-align: auto;
 	
-	margin-top: 100px;
-	margin-bottom: 50px;
-	margin-left: 5%;
-	margin-right: 5%;
+	margin-bottom: 30px;
 }
 
 /* Link Box Classes */
@@ -390,7 +474,6 @@ iframe {
 	height: 90%;
 	margin-top: 5%;
 	margin-left: 5%;
-	border-radius: 0.5cm;
 	
 	display: inline;
 }
@@ -482,20 +565,23 @@ iframe {
 /* Table Classes */
 
 table {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 25px;
+  margin-bottom: 25px;
   border-radius: 20px;
   border: solid 4px black;
+  border-top: solid 0px rgba(0,0,0,0);
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
   border-collapse: separate;
   background-color: white;
-  width: 75%;
-  margin-left: 12.5%;
-  margin-right: 12.5%;
+  width: 45%;
+  vertical-align: top;
+  display: inline-table;
 }
 
 td, th {
   color: black;
-  font-size: 1.5vw;
+  font-size: 16px;
   font-family: "MediumGotham";
 
   text-align: left;
@@ -504,9 +590,14 @@ td, th {
 
 .table_name {
   color: black;
-  font-size: 2.5vw;
+  font-size: 28px;
   font-family: "CustomGotham";
   
+  border: solid 4px black;
+  border-bottom: solid 0px rgba(0,0,0,0);
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  background-color: white;
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
@@ -564,6 +655,7 @@ tr:last-of-type td:last-of-type {
 }
 
 .doubler_title {
+	margin-top: 5%;
 	width: 100%;
 	text-align: center;
 }
