--- a/base/m_style.css
+++ b/base/m_style.css
@@ -100,7 +100,7 @@ header {
   height: 50px;
   line-height: 50px;
   text-decoration: none;
-  margin-bottom: 5%;
+  margin-bottom: 12%;
 }
 
 .no_js_tablink {
@@ -117,7 +117,7 @@ header {
   height: 50px;
   line-height: 50px;
   text-decoration: none;
-  margin-bottom: 5%;
+  margin-bottom: 12%;
 }
 
 footer {
@@ -285,13 +285,13 @@ iframe {
 	
 	width: 100%;
 	font-family: "CustomGotham";
-	font-size: 4vmax;
+	font-size: 4vw;
 	text-shadow: 0px 0px 2vw black;
 	text-align: center;
 	
 	position: absolute;
 	display: block;
-	top: 0%;
+	top: 9%;
 	
 	margin-bottom: 2.5%;
 	margin-top: 0%;
@@ -325,7 +325,7 @@ iframe {
 	
 	padding-top: 10%;
 	position: relative;
-	display: table;
+	display: block;
 	border-radius: 20px;
 	
 	margin-top: 20px;
