--- a/base/m_style.css
+++ b/base/m_style.css
@@ -285,13 +285,13 @@ iframe {
 	
 	width: 100%;
 	font-family: "CustomGotham";
-	font-size: 4vw;
+	font-size: 6vmin;
 	text-shadow: 0px 0px 2vw black;
 	text-align: center;
 	
 	position: absolute;
 	display: block;
-	top: 9%;
+	top: 10%;
 	
 	margin-bottom: 2.5%;
 	margin-top: 0%;
@@ -328,7 +328,7 @@ iframe {
 	display: block;
 	border-radius: 20px;
 	
-	margin-top: 20px;
+	margin-top: 10px;
 	margin-bottom: 50px;
 	margin-left: 5%;
 	margin-right: 5%;
