--- a/base/m_style.css
+++ b/base/m_style.css
@@ -285,7 +285,7 @@ iframe {
 	
 	width: 100%;
 	font-family: "CustomGotham";
-	font-size: 9vw;
+	font-size: 24px;
 	text-shadow: 0px 0px 2vw black;
 	text-align: center;
 	
