--- a/base/m_style.css
+++ b/base/m_style.css
@@ -285,13 +285,13 @@ iframe {
 	
 	width: 100%;
 	font-family: "CustomGotham";
-	font-size: 24px;
+	font-size: 15vw;
 	text-shadow: 0px 0px 2vw black;
 	text-align: center;
 	
 	position: absolute;
 	display: block;
-	top: 10%;
+	top: 4%;
 	
 	margin-bottom: 2.5%;
 	margin-top: 0%;
@@ -323,12 +323,11 @@ iframe {
 	width: 90%;
 	min-height: 100%;
 	
-	padding-top: 10%;
 	position: relative;
 	display: block;
 	border-radius: 20px;
 	
-	margin-top: 10px;
+	margin-top: 50px;
 	margin-bottom: 50px;
 	margin-left: 5%;
 	margin-right: 5%;
