--- a/base/style.css
+++ b/base/style.css
@@ -572,8 +572,7 @@ iframe {
 table {
   margin-top: 25px;
   margin-bottom: 25px;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-radius: 20px;
   border: solid 4px black;
   border-top: solid 0px rgba(0,0,0,0);
   border-top-left-radius: 0px;
