--- a/base/style.css
+++ b/base/style.css
@@ -582,6 +582,11 @@ table {
   width: 45%;
   vertical-align: top;
   display: inline-table;
+  
+-webkit-backface-visibility: hidden;
+-moz-backface-visibility: hidden;
+-webkit-transform: translate3d(0, 0, 0);
+-moz-transform: translate3d(0, 0, 0)
 }
 
 td, th {
