--- a/base/style.css
+++ b/base/style.css
@@ -574,6 +574,7 @@ table {
   margin-top: 25px;
   margin-bottom: 25px;
   border-radius: 20px;
+  border: solid 4px black;
   border-top: solid 0px rgba(0,0,0,0);
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
@@ -596,7 +597,7 @@ td, th {
   font-size: 28px;
   font-family: "CustomGotham";
   
-  
+  border: solid 4px black;
   border-bottom: solid 0px rgba(0,0,0,0);
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
