--- a/base/style.css
+++ b/base/style.css
@@ -281,7 +281,7 @@ iframe {
 }
 
 .SmallMediaBox {
-	width:45%;
+	width:40%;
 	height: auto;
 	min-height: 100%;
 	background-color: rgb(17,86,149);
@@ -301,8 +301,8 @@ iframe {
 	
 	margin-top: 20px;
 	margin-bottom: 20px;
-	margin-left: 4%;
-	margin-right: 4%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #Charts {
