--- a/base/m_style.css
+++ b/base/m_style.css
@@ -45,7 +45,7 @@
 
 .numberedlist_left {
 	display: block;
-	padding-left: 5%;
+	padding-left: 10%;
 }
 
 .hyperlink, .hyperlink_blue {
@@ -218,7 +218,7 @@ iframe {
 	background-color: rgb(255, 106, 0);
 	border: solid 4px white;
 	border-radius: 25px;
-	box-shadow: 0px 0px 30px 5px black;
+	box-shadow: 0px 0px 30px 1px black;
 	
 	display: block;
 	margin-left: auto;
@@ -272,6 +272,14 @@ iframe {
 	float: bottom;
 	vertical-align: bottom;
 	bottom: 100%;
+	
+	transition: none;
+}
+
+.article_img_container:hover {
+	width: 36vw;
+	height: 36vw;
+	background-color: rgba(25,25,25,0.25);
 }
 
 .article_nav_button {
