--- a/base/style.css
+++ b/base/style.css
@@ -102,6 +102,7 @@
 }
 
 body {
+	background-color: rgb(50, 111, 170);
     background-image: url(BACKGROUND1.png);
     padding:0;
     margin:0;
@@ -324,7 +325,16 @@ iframe {
 	
 	display: block;
 	float: left;
+	transition: width 0.25s, height 0.25s, background-color 0.25s;
+	transition-timing-function: ease-in-out;
 }
+
+.article_img_container:hover {
+	width: 18.5vw;
+	height: 18.5vw;
+	background-color: rgba(25,225,25,0.1);
+}
+
 
 .article_nav {
 	margin-top: 40px;
