--- a/base/m_style.css
+++ b/base/m_style.css
@@ -267,6 +267,8 @@ iframe {
 	margin-bottom: 2.5%;
 	
 	background-color: rgba(25,25,25,0.25);
+	outline: 0;
+	border: 0;
 	
 	display: inline;
 	float: bottom;
