--- a/base/style.css
+++ b/base/style.css
@@ -136,6 +136,12 @@ header {
   line-height: 40px;
   text-decoration: none;
   margin-bottom: 2.5%;
+  transition: font-size 0.25s ease-in-out, background-color 0.25s ease-in-out;
+}
+
+.tablink:hover {
+	font-size: 16px;
+	background-color: rgb(0, 159, 255);
 }
 
 .no_js_tablink {
@@ -166,7 +172,8 @@ footer {
 	
 	width: 100%;
 	height: 100%;
-	background-color:rgb(17,86,149);
+	background-color:rgba(17,66,149, 0.65);
+	box-shadow: 10px 20px 20px 20px black;
 	float: bottom;
 }
 
@@ -308,7 +315,6 @@ iframe {
 	justify-content: space-around;
 	
 	margin-top: 20px;
-	margin-bottom: 20px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -372,7 +378,8 @@ iframe {
 	background-color: rgba(25,25,25,0.35);
 	border: solid 3px rgba(255,255,255,0.35);
 	border-radius: 20px;
-	padding: 10px 0px 10px 0px;
+	padding: 10px 10px 10px 10px;
+	margin-top: 5px;
 	display: inline-block;
 }
 
