--- a/base/m_style.css
+++ b/base/m_style.css
@@ -291,7 +291,7 @@ iframe {
 
 .article_nav_button {
 	width: 90%;
-	margin: 10px 10px 10px 10px;
+	margin-top: 10px;
 }
 
 .article_title, .doubler_title {
